--- a/style.css
+++ b/style.css
@@ -206,16 +206,15 @@
 }
 
 body {
-  margin: 0;
-  font-family: var(--bs-body-font-family);
-  font-size: var(--bs-body-font-size);
-  font-weight: var(--bs-body-font-weight);
-  line-height: var(--bs-body-line-height);
-  color: var(--bs-body-color);
-  text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  line-height: 1.5;
+  font-size: var(--cnvs-font-size-body);
+  font-family: var(--cnvs-body-font);
+  background: var(--cnvs-body-bg);
+  background-image: url('images/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
 hr {
@@ -13628,12 +13627,18 @@ textarea.form-control-lg {
   float: none;
   width: 100%;
   margin: 0 auto;
-  background-color: var(--cnvs-body-bg);
+  background-color: transparent;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 1200px) {
   body:not(.stretched) #wrapper {
     max-width: 1200px;
+    background: var(--cnvs-body-bg-boxed);
+    background-image: url('images/background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
   }
 }
 @media (min-width: 1400px) {
